# swaybar_info

./: Cargo.toml  Changelog.md  LICENSE  README.md
.github/: dependabot.yml
src/: args.rs  builtin.rs  error.rs  external.rs  main.rs  proc.rs  signal_handling.rs  swaybar_object.rs
