[package]
name = "swaybar_info"
version = "0.1.6"
edition = "2021"
description = "Provides swaybar with info to be displayed"
license = "MIT"
repository = "https://github.com/Stephen-Seo/swaybar_info"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
regex = "1.6"
